--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       background: #a1a1a1;
     }
   </style>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body class="bg-background">
   <div id="root"></div>
